# flare_surya

./: .gitignore  README.md  datamodule.py  finetuning.py  flare_surya.yaml  new_loss_readme.md  pyproject.toml
configs/: first_experiement_model_comparison.yaml
configs/anvil/: experiment_with_zarr.yaml  first_experiment_model_comparison.yaml
configs/data/: gong_download.yaml  lasco_c2_download.yaml
configs/nas/: alexnet_exp.yaml  alexnet_exp_gh.yaml  alexnet_exp_zarr.yaml  alexnet_test_gh.yaml  baselines_exp.yaml  exp_nasgh.yaml  exp_surya.yaml  exp_with_zarr_NAS.yaml  resnet18_exp.yaml  resnet18_exp_gh.yaml  resnet18_exp_zarr.yaml  resnet18_test_gh.yaml  test_baseline_experiment.yaml  test_first_experiment_model_comparison.yaml  test_nasgh.yaml
configs/pretrain/: halpha.yaml  lasco_c2.yaml  solar_pretrain.yaml  xrs.yaml
configs/slurm/: baselines_exp.yaml  exp_surya.yaml
flare_surya/: data_check.ipynb
flare_surya/analysis/: analysis_test_results.ipynb  data_distribution.ipynb
flare_surya/configs/: alexnet_exp.yaml  alexnet_exp_gh.yaml  alexnet_exp_zarr.yaml  alexnet_exp_zarr_anvil.yaml  baseline_exp_with_zarr.yaml  baseline_experiement.yaml  exp_nasgh.yaml  (+12 more)
scripts/: check_dataloader.py  check_xrs_zarr.py  finetune_flaresurya.pbs  finetune_flaresurya_gh.pbs  finetune_flaresurya_multinode_test.pbs  finetuning.py  finetuning_suryaflux.py  finetuning_zarr.py  run_baseline_zarr.sh  run_baselines.sh  run_create_zarr_script.sh  run_download_surya_bench.sh  run_slurm.sh  run_slurm_test.sh  run_surya_zarr.sh  test_dataset.py  train_baselines.pbs  train_baselines_multinode.pbs  train_baselines_zarr.pbs  training_baseline.py  training_baseline_zarr.py
test/: test_pretrain.py  test_pretrain_real_data.py
(+166 files in other folders)
