[project]
name = "flare-surya"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "terratorch>=1.1.1",
    "terratorch-surya>=0.1.0",
    "huggingface-hub>=0.10.0",
    "hf-transfer>=0.1.9",
    "peft>=0.4.0",
    "transformers>=4.41,<5.0",
]
