[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flare-surya"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "terratorch>=1.1.1",
    "terratorch-surya>=0.1.0",
    "huggingface-hub>=0.10.0",
    "hf-transfer>=0.1.9",
    "peft>=0.4.0",
    "transformers>=4.41,<5.0",
    "zarr<=3.0.0",
]

[tool.setuptools.packages.find]
include = ["flare_surya*"]
exclude = ["logs*"]
